--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --opoen --mode development"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-regenerator-runtime": "^6.5.0",
+    "babel-preset-env": "^1.7.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
@@ -30,5 +28,12 @@
   "bugs": {
     "url": "https://github.com/Temar-Alkoryb/test-crew-personnel/issues"
   },
-  "homepage": "https://github.com/Temar-Alkoryb/test-crew-personnel#readme"
+  "homepage": "https://github.com/Temar-Alkoryb/test-crew-personnel#readme",
+  "devDependencies": {
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
+    "webpack-cli": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
+  }
 }
